--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@emotion/styled": "^11.11.0",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
+    "@mui/material": "^5.15.14",
+    "@mui/x-data-grid": "^7.1.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "cra-template": "1.2.0",
@@ -16,11 +18,14 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-data-grid": "^7.0.0-beta.43",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-table": "^7.8.0",
+    "react-table-ui": "^0.1.6",
     "web-vitals": "^3.5.1"
   },
   "scripts": {
