--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cra-template": "1.2.0",
     "framer-motion": "^11.0.20",
     "jwt-decode": "^4.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-data-grid": "^7.0.0-beta.43",
@@ -23,6 +24,7 @@
     "react-hook-form": "^7.51.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.12.0",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.21.1",
     "react-table": "^7.8.0",
     "react-table-ui": "^0.1.6",
