--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/open-sans": "^5.0.27",
-    "@fontsource/raleway": "^5.0.17",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
     "@mui/material": "^5.15.14",
     "@mui/x-data-grid": "^7.1.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "core-js": "^3.36.1",
     "cra-template": "1.2.0",
     "framer-motion": "^11.0.20",
     "jwt-decode": "^4.0.0",
-    "prop-types": "^15.8.1",
+    "lottie-web": "^5.12.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-data-grid": "^7.0.0-beta.43",
